--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "file-loader": "^0.11.1",
     "helmet": "^3.5.0",
     "json-loader": "^0.5.4",
+    "jss": "^9.3.3",
+    "jss-preset-default": "^4.0.1",
     "lodash": "^4.16.2",
     "material-ui": "^1.0.0-beta.22",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -87,6 +89,7 @@
     "react-addons-test-utils": "^15.5.0",
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.2",
+    "react-jss": "^8.1.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.3",
     "react-router-redux": "^4.0.0",
