--- a/package.json
+++ b/package.json
@@ -71,8 +71,9 @@
     "json-loader": "^0.5.4",
     "jss": "^9.3.3",
     "jss-preset-default": "^4.0.1",
+    "keycode": "^2.1.9",
     "lodash": "^4.16.2",
-    "material-ui": "^1.0.0-beta.22",
+    "material-ui": "^1.0.0-beta.26",
     "material-ui-icons": "^1.0.0-beta.17",
     "method-override": "^2.3.8",
     "passport": "^0.3.2",
